# sfxmaster

./: .gitignore  .htaccess  CMakeCache.txt  CMakeLists.txt  QUICKUI  README.md  node_modules  package-lock.json  package.json
cpp/: CMakeLists.txt
cpp/src/: main.cpp
public/soloud/: soloud.js
quickui-app/: .gitignore  README.md  package.json  server.js
quickui-app/public/: index.html
quickui-app/src/: App.js  QUICKUI.js
quickui-app/src/components/ui/: button.jsx  label.jsx
sfx-master/: .gitignore  LICENSE  README.md  package-lock.json  package.json
sfx-master/public/: index.html  manifest.json
sfx-master/scripts/: build-soloud.js
sfx-master/src/components/ui/: slider.jsx
soloud/: test.js
src/: App.js  QUICKUI.js  index.css  main.cpp
src/audio/: AudioManager.cpp  AudioManager.h
src/components/: QuickUI.js
src/components/ui/: input.jsx
src/ui/: UI.cpp  UI.h
src/utils/: SoloudWrapper.js
